--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -7,6 +7,8 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+        - name: Checkout Repo
+          uses: actions/checkout@v4
         - name: Welcome Message
           run:  echo "My first Github Action Job"
 
