--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -9,12 +9,17 @@ jobs:
         steps:
         - name: Checkout Repo
           uses: actions/checkout@v4
-        - name: Welcome Message
-          run:  echo "My first Github Action Job"
+        - name: List and Read files
+          run: | 
+            echo "My first Github Action Job"
+            ls -ltra
+            cat README.md
+        - name: Generate ASCII Artwork
+          run: cowsay -f dragon "Run for cover, I am a DRAGON.....RAWR" >> dragon.txt
 
-        - name: List files
-          run: ls
+        # - name: List files
+        #   run: ls
 
-        - name: Read files
-          run: cat README.md
+        # - name: Read files
+        #   run: cat README.md
         
