--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -9,19 +9,12 @@ jobs:
         steps:
         - name: Checkout Repo
           uses: actions/checkout@v4
-
-        - name: Install Cowsay Program
-          run: sudo apt-get install cowsay -y
-
-        - name: Execute Cowsay CMD
-          run: cowsay -f dragon "Run for cover, I am a DRAGON.....RAWR" >> dragon.txt
-
-        - name: Test File Exists
-          run: grep -i "dragon" dragon.txt
-
-        - name: Read files
-          run: cat dragon.txt
-
+        
         - name: List Repo files in the path
           run: ls -ltra
         
+
+        - name: Executing Shell Script
+          run:  ./ascii_script.sh
+
+
