changes done to shell script file

--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -14,7 +14,7 @@ jobs:
           run: ls -ltra
         
 
-        - name: Executing Shell Script
+        - name: Executing Shell Script commands
           run: |
             chmod +x ascii-script.sh
             ./ascii-script.sh
